# watt-servicenet

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  LICENSING.md  README.md  docker-compose.yml
apps/service-node/: Cargo.toml
apps/service-node/src/: lib.rs  main.rs
apps/service-node/tests/: http_register_and_invoke.rs  postgres_http_flow.rs
apps/servicenet-discovery/: index.html  package-lock.json  package.json  vite.config.ts
apps/servicenet-discovery/src/: App.tsx  index.css
apps/servicenet-discovery/src/api/: servicenet.ts
apps/servicenet-discovery/src/components/: Footer.tsx  Select.tsx  ThemeToggle.tsx
apps/servicenet-discovery/src/lib/: agents.ts  theme.ts  types.ts
crates/service-gateway/: Cargo.toml
crates/service-gateway/src/: lib.rs  protocol_client.rs  service_identity.rs  task_gateway.rs
crates/service-network-p2p/: Cargo.toml
crates/service-network-p2p/src/: lib.rs
crates/service-network-p2p/tests/: p2p_postgres_convergence.rs  p2p_provider_backfill_sync.rs  p2p_provider_sync.rs  p2p_published_agent_backfill_sync.rs  p2p_published_agent_sync.rs
crates/service-protocol/: Cargo.toml
crates/service-protocol/src/: lib.rs
crates/service-registry/: Cargo.toml
crates/service-registry/src/: lib.rs  service_identity.rs
crates/service-registry/tests/: postgres_registry_store.rs
