[workspace]
resolver = "2"
members = [
  "crates/service-protocol",
  "crates/service-registry",
  "crates/service-gateway",
  "crates/service-network-p2p",
  "apps/service-node",
]

[workspace.dependencies]
anyhow = "1.0"
async-trait = "0.1"
axum = "0.7"
base64 = "0.22"
chacha20poly1305 = "0.10"
chrono = { version = "0.4", features = ["serde", "clock"] }
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "json"] }
thiserror = "2.0"
tokio = { version = "1.42", features = ["full"] }
tower = "0.5"
tempfile = "3.14"
uuid = { version = "1.11", features = ["v4", "serde"] }
wattswarm-network-substrate = { path = "../wattswarm/crates/network-substrate" }

[workspace.package]
edition = "2024"
license = "Apache-2.0"
authors = ["sac"]
