[workspace]
resolver = "2"
members = [
  "crates/service-protocol",
  "crates/service-registry",
  "crates/service-gateway",
  "crates/service-network-p2p",
  "apps/service-node",
]

[workspace.dependencies]
anyhow = "1.0"
async-trait = "0.1"
axum = "0.7"
base64 = "0.22"
chacha20poly1305 = "0.10"
chrono = { version = "0.4", features = ["serde", "clock"] }
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
hex = "0.4"
libp2p-identity = { version = "0.2.13", features = ["ed25519", "rand"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "json"] }
thiserror = "2.0"
tokio = { version = "1.42", features = ["full"] }
tower = "0.5"
tempfile = "3.14"
uuid = { version = "1.11", features = ["v4", "serde"] }
wattswarm-artifact-store = { path = "../wattswarm/crates/artifact-store" }
wattswarm-network-substrate = { path = "../wattswarm/crates/network-substrate" }
wattswarm-network-transport-core = { path = "../wattswarm/crates/network-transport-core" }
wattswarm-network-transport-iroh = { path = "../wattswarm/crates/network-transport-iroh" }

[workspace.package]
edition = "2024"
