[package]
name = "wattswarm-servicenet-node"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tower.workspace = true
uuid.workspace = true
wattswarm-servicenet-p2p = { path = "../../crates/service-network-p2p" }
wattswarm-servicenet-gateway = { path = "../../crates/service-gateway" }
wattswarm-servicenet-protocol = { path = "../../crates/service-protocol" }
wattswarm-servicenet-registry = { path = "../../crates/service-registry" }

[dev-dependencies]
base64.workspace = true
ed25519-dalek.workspace = true
