[package]
name = "watt-servicenet-node"
version = "0.1.0"
edition.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tower.workspace = true
uuid.workspace = true
watt-servicenet-p2p = { path = "../../crates/service-network-p2p" }
watt-servicenet-gateway = { path = "../../crates/service-gateway" }
watt-servicenet-protocol = { path = "../../crates/service-protocol" }
watt-servicenet-registry = { path = "../../crates/service-registry" }

[dev-dependencies]
base64.workspace = true
ed25519-dalek.workspace = true
serde_jcs = "0.1"
bs58 = "0.5"
