[package]
name = "watt-servicenet-gateway"
version = "0.1.0"
edition.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
reqwest.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio.workspace = true
uuid.workspace = true
watt-servicenet-protocol = { path = "../service-protocol" }
watt-servicenet-registry = { path = "../service-registry" }

[dev-dependencies]
axum.workspace = true
base64.workspace = true
ed25519-dalek.workspace = true
serde_jcs = "0.1"
bs58 = "0.5"
