[package]
name = "watt-servicenet-gateway"
version = "0.1.0"
edition.workspace = true
license = "AGPL-3.0-only"

[dependencies]
a2a.workspace = true
a2a-client.workspace = true
anyhow.workspace = true
async-trait.workspace = true
base64.workspace = true
bs58 = "0.5"
chrono.workspace = true
ed25519-dalek.workspace = true
futures-util.workspace = true
reqwest-a2a.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_jcs = "0.2"
sha2.workspace = true
thiserror.workspace = true
tokio.workspace = true
uuid.workspace = true
watt-did = { path = "../../../watt-did" }
watt-servicenet-protocol = { path = "../service-protocol" }
watt-servicenet-registry = { path = "../service-registry" }

[dev-dependencies]
axum.workspace = true
bs58 = "0.5"
