[package]
name = "wattswarm-servicenet-p2p"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
wattswarm-network-substrate.workspace = true
wattswarm-servicenet-protocol = { path = "../service-protocol" }

[dev-dependencies]
tokio.workspace = true
uuid.workspace = true
wattswarm-servicenet-registry = { path = "../service-registry" }
