[package]
name = "watt-servicenet-p2p"
version = "0.1.0"
edition.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
wattswarm-network-substrate.workspace = true
watt-servicenet-protocol = { path = "../service-protocol" }

[dev-dependencies]
tokio.workspace = true
uuid.workspace = true
watt-servicenet-registry = { path = "../service-registry" }
