[package]
name = "watt-servicenet-p2p"
version = "0.1.0"
edition.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
hex.workspace = true
libp2p-identity.workspace = true
rand = "0.8"
serde.workspace = true
serde_json.workspace = true
wattswarm-artifact-store.workspace = true
wattswarm-crypto = { path = "../../../wattswarm/crates/crypto" }
wattswarm-network-substrate.workspace = true
wattswarm-network-transport-core.workspace = true
wattswarm-network-transport-iroh.workspace = true
watt-servicenet-protocol = { path = "../service-protocol" }

[dev-dependencies]
tokio.workspace = true
uuid.workspace = true
watt-servicenet-registry = { path = "../service-registry" }
