[package]
name = "wattswarm-servicenet-registry"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
base64.workspace = true
chacha20poly1305.workspace = true
chrono.workspace = true
ed25519-dalek.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
thiserror.workspace = true
tokio.workspace = true
uuid.workspace = true
wattswarm-servicenet-protocol = { path = "../service-protocol" }

[dev-dependencies]
base64.workspace = true
ed25519-dalek.workspace = true
tempfile.workspace = true
