[package]
name = "watt-servicenet-registry"
version = "0.1.0"
edition.workspace = true
license = "AGPL-3.0-only"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
base64.workspace = true
chacha20poly1305.workspace = true
chrono.workspace = true
ed25519-dalek.workspace = true
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde.workspace = true
serde_json.workspace = true
serde_jcs = "0.2"
sha2 = "0.10"
sqlx.workspace = true
thiserror.workspace = true
tokio.workspace = true
uuid.workspace = true
watt-did = { path = "../../../watt-did" }
watt-wallet = { path = "../../../watt-wallet" }
watt-servicenet-protocol = { path = "../service-protocol" }

[dev-dependencies]
base64.workspace = true
bs58 = "0.5"
ed25519-dalek.workspace = true
tempfile.workspace = true
